feature(csrf-token): add csrf token cookie
closes #48

> Cookie:_ga=GA1.1.776949977.1456326673;
.AspNetCore.Antiforgery.UXO5fwPO0_I=CfDJ8MWQ4vQ8YoxPiafJLrfvOsudL0CCVXA8
_NntZcOKwN9DJUbwd7rSR3gLIurZ0wmrHfHQUwzpTQdDcHfDQbVP1wl2EXIuI2n--HwpW7L1
YblEK2qa4rU58-kkZ0EB5x9SnFP_wZJOPdSLicT5STl8fOg;
XSRF-TOKEN=CfDJ8MWQ4vQ8YoxPiafJLrfvOss01F393ftQsOZ-XtJIgsaLOgv7_5arDVb_U
P5zTN13u6bkwDvRieoXNGo6vEPgpSVqbpEVXaMRr2UlS_qM4h_LmQ-We6l5IRo1HzAeD5Qa0
KIBEB2TLgBKAYv-Uo2MQWc
> Host:localhost:5000

--- a/Client/components/navmenu/navmenu.component.css
+++ b/Client/components/navmenu/navmenu.component.css
@@ -12,6 +12,7 @@ li.link-active a:focus {
 
 /* Keep the nav menu independent of scrolling and on top of other items */
 .nav { }
+.nav li { display:inline-block; }
 .nav li a { padding:10px 20px; }
 .nav li a:hover, .nav li a:focus { text-decoration: none; }
 
