--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-inverse">
+<ul class="nav">
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/home']">
             <i class="fa fa-home" aria-hidden="true"></i> Home
